@@ -1,4 +1,12 @@
-﻿drkns 25.02.2016 18:04:48 +0200 - build 4562
+﻿w17 26.02.2016 19:47:29 +0300 - build 4563
+
+1. Experimental: M#2983: Far3, подсчёт размера папки на удалённом компе, глюк с links
+   ВСЕ пройденные реальные пути пишутся в std::set.
+   Это сделано сознательно. Во-первых так не надо учитывать мнооого тонкостей, во-вторых
+   если в ScanTree каталоги можно пропускать то на мой взгляд иначе просто не получится.
+   Но желающие естественно всё это могут оптимизировать.
+
+drkns 25.02.2016 18:04:48 +0200 - build 4562
 
 1. 0003187: Symlink на сетевой каталог не работает после редактирования целевого каталога в диалоге атрибутов
 
